feat(product and user): take certain endpoints out of auth
