# src/product/routes.ts
@@ -7,8 +7,23 @@ routes.get(
     '/',
     async (req: Request, res: Response) => {
         try {
-            const response = 'successful product api';
-            res.status(200).json(response);
+            const productService = new ProductService();
+            const products = await productService.getProducts();
+            res.status(200).json(products);
+        } catch (error: any) {
+            res.status(error.statusCode).json({ error: error.description });
+        }
+    }
+);
+
+routes.get(
+    '/:productId',
+    async (req: Request, res: Response) => {
+        try {
+            const productService = new ProductService();
+            const productId = req.params.productId;
+            const product = productService.getProduct(productId);
+            res.status(200).json(product);
         } catch (error: any) {
             res.status(error.statusCode).json({ error: error.description });
         }
@@ -22,7 +37,7 @@ routes.get(
             const username = ''; // TODO: figure out this part
             const productId = req.params.productId;
             const quantityForPurchase = String(req.query.quantity);
-            
+
             const productService = new ProductService();
             await productService.purchaseProduct(productId, quantityForPurchase, username);
 
