# src/swagger_output.json
@@ -145,6 +145,19 @@
         }
       }
     },
+    "/user/reset": {
+      "post": {
+        "description": "",
+        "responses": {
+          "409": {
+            "description": "Conflict"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/user/deposit": {
       "post": {
         "description": "",
@@ -181,6 +194,26 @@
     "/product/": {
       "get": {
         "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/product/{productId}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "productId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
